# d-inference

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SPEC.md  go.work  go.work.sum  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
analytics/: README.md  go.mod
analytics/cmd/analytics/: main.go
analytics/internal/config/: config.go
analytics/internal/httpapi/: server.go  server_test.go
analytics/internal/leaderboard/: store.go  store_test.go
analytics/internal/pseudonym/: alias.go  alias_test.go
app/DGInf/: Package.swift
app/EigenInference/: Package.swift
apps/provider-mac/: Package.swift
console-ui/: eslint.config.mjs  package-lock.json  package.json
console-ui/__tests__/: api.test.ts  cert-verify.test.ts  components.test.tsx  pages.test.tsx  verification-mode.test.tsx
console-ui/src/: proxy.ts
console-ui/src/app/: globals.css  layout.tsx  page.tsx
console-ui/src/components/: AppShell.tsx  ChatInput.tsx  (+11 more)
coordinator/: Caddyfile  Dockerfile  go.mod  go.sum
coordinator/deploy/: docker-compose.yml  start.sh
docs/: ARCHITECTURE.md  RUNBOOK.md  UPSTREAMS.md  acme-mda-apple-root-signed.md  coordinator-deploy-runbook.md  image-video-generation-research.md  release-runbook.md
enclave/: Package.swift
enclave/include/: dginf_enclave.h  eigeninference_enclave.h
image-bridge/: requirements.txt
image-bridge/dginf_image_bridge/: __init__.py  __main__.py  drawthings_backend.py  server.py
image-bridge/eigeninference_image_bridge/: __init__.py  __main__.py  drawthings_backend.py  server.py
image-bridge/tests/: test_drawthings.py  test_integration.py  test_server.py
landing/: index.html
papers/: dginf-private-inference-v1.tex  dginf-private-inference.tex  diagram-test.tex  provisional-patent-draft.md  provisional-patent-draft.tex
provider/: Cargo.toml  stt_server.py
provider/src/: config.rs  coordinator.rs  crypto.rs  hardware.rs  hypervisor.rs  inference.rs  main.rs  models.rs  protocol.rs  proxy.rs  scheduling.rs  secure_enclave_key.rs  security.rs  server.rs  service.rs  wallet.rs
provider/src/backend/: mod.rs  omlx.rs  vllm_mlx.rs  vmlx.rs
scripts/: admin.sh  benchmark-light.py  benchmark-models.py  build-bridge-app.sh  build-bundle.sh  bundle-app.sh  deploy-acme.sh  enroll-with-acme.mobileconfig  entitlements.plist  install.sh  sign-hardened.sh  test-stt-e2e.sh
sdk/: pyproject.toml
sdk/dginf/: __init__.py  cli.py  client.py  config.py  crypto.py  errors.py  types.py
sdk/tests/: test_cli.py  test_client.py  test_config.py  test_crypto.py  test_types.py
services/coordinator/: go.mod  go.sum
services/providerd/: go.mod
settlement/: package-lock.json  package.json  tsconfig.json
settlement/src/: client.ts  config.ts  deposit.ts  index.ts  payout.ts  types.ts  withdraw.ts
settlement/tests/: config.test.ts  deposit.test.ts  payout.test.ts  withdraw.test.ts
tests/: integration_test.py  test_crypto_interop.py
tests/e2e/: test_cli_run.py  test_full_mlx_job_loop.py  test_local_job_loop.py  test_real_mlx_runtime.py
web/: package-lock.json  package.json
web/src/: middleware.ts
(+1663 files in other folders)
