[project]
name = "dginf-workspace"
version = "0.1.0"
description = "Mac-first decentralized private inference workspace."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "cryptography>=45.0.0",
  "httpx>=0.28.1",
  "pytest>=8.4.0",
]

[tool.uv.workspace]
members = [
  "packages/runtime-mlx",
  "packages/sdk-py",
]

[tool.pytest.ini_options]
testpaths = [
  "packages/runtime-mlx/tests",
  "packages/sdk-py/tests",
  "tests/e2e",
]
pythonpath = [
  "packages/runtime-mlx/src",
  "packages/sdk-py/src",
]

[tool.ruff]
line-length = 100
target-version = "py312"
